subprojects/pclc/test/errors/call_of_int.pcl
// RUN: not pclc %s | FileCheck %s

a = 3;
print a();

// CHECK: call_of_int.pcl:4.7-9: Call parameter type/count mismatch
// CHEKC-NEXT: 4 |     print a();
// CHEKC-NEXT:           ~~~~^~~~~
